--- a/package.json
+++ b/package.json
@@ -4,20 +4,29 @@
   "description": "Anygine webpack loader",
   "main": "index.js",
   "scripts": {
-    "test": "cd test && mocha ."
+    "test": "cd test && mocha .",
+    "clean": "rm -rf example/dist",
+    "start": "npm run clean && cd example && webpack-dev-server",
+    "example:build": "npm run clean && cd example && webpack"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "anygine": "git+http://github.com/benignware-labs/anygine.git",
     "ext-name": "^5.0.0",
-    "isbinaryfile": "^3.0.2",
     "glob": "^7.1.2",
+    "isbinaryfile": "^3.0.2",
     "loader-utils": "^1.1.0",
-    "mocha": "^5.1.1"
+    "object-path": "^0.11.4"
   },
   "devDependencies": {
+    "file-loader": "^1.1.11",
+    "frontmatter": "0.0.3",
     "handlebars": "^4.0.11",
-    "pretty": "^2.0.0"
+    "mocha": "^5.1.1",
+    "pretty": "^2.0.0",
+    "webpack": "^4.6.0",
+    "webpack-cli": "^2.0.15",
+    "webpack-dev-server": "^3.1.3"
   }
 }
