--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "test": "cd test && mocha .",
     "clean": "rm -rf example/dist",
     "start": "npm run clean && cd example && webpack-dev-server",
-    "example:build": "npm run clean && cd example && webpack"
+    "example:build": "npm run clean && cd example && webpack",
+    "lint": "./node_modules/.bin/eslint ./lib"
   },
   "author": "",
   "license": "ISC",
@@ -20,6 +21,7 @@
     "object-path": "^0.11.4"
   },
   "devDependencies": {
+    "eslint": "^4.19.1",
     "file-loader": "^1.1.11",
     "frontmatter": "0.0.3",
     "handlebars": "^4.0.11",
