--- a/package.json
+++ b/package.json
@@ -20,9 +20,10 @@
     "object-path": "^0.11.4"
   },
   "peerDependencies": {
-    "anyengine": "git+http://github.com/benignware-labs/anyengine.git"
+    "anyengine": "^0.0.1"
   },
   "devDependencies": {
+    "anyengine": "0.0.1",
     "eslint": "^4.19.1",
     "file-loader": "^1.1.11",
     "frontmatter": "0.0.3",
@@ -30,7 +31,7 @@
     "mocha": "^5.1.1",
     "pretty": "^2.0.0",
     "webpack": "^4.6.0",
-    "webpack-cli": "^2.0.15",
-    "webpack-dev-server": "^3.1.3"
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.10"
   }
 }
